--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "packages/*"
   ],
   "scripts": {
+    "api": "yarn workspace packages/api",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -12,10 +13,10 @@
   "devDependencies": {
     "husky": "^7.0.0"
   },
-  "lint-staged":{
-      "**/*/*.{js,jsx,ts,tsx}":[
-          "yarn eslint",
-          "yarn test"
-      ]
+  "lint-staged": {
+    "**/*/*.{js,jsx,ts,tsx}": [
+      "yarn eslint",
+      "yarn test"
+    ]
   }
 }
