--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -22,7 +22,6 @@
     "@emotion/react": "11",
     "@emotion/styled": "11",
     "@graphql-codegen/cli": "^2.6.2",
-    "@graphql-codegen/typed-document-node": "^2.2.5",
     "@graphql-codegen/typescript-react-query": "^3.5.5",
     "@graphql-codegen/typescript-urql": "^3.5.3",
     "apollo-boost": "^0.4.9",
@@ -33,6 +32,7 @@
     "framer-motion": "6",
     "grapheme-splitter": "^1.0.4",
     "graphql": "^16.3.0",
+    "graphql-ws": "^5.6.4",
     "i18next-http-backend": "^1.3.2",
     "next": "12.0.8",
     "prop-types": "^15.8.1",
@@ -43,7 +43,6 @@
     "react-spring": "^9.4.2",
     "sass": "^1.49.8",
     "twemoji-parser": "^13.1.0",
-    "urql": "^2.1.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
