--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -21,10 +21,8 @@
     "@chakra-ui/react": "^1.8.5",
     "@emotion/react": "11",
     "@emotion/styled": "11",
-    "@graphql-codegen/cli": "^2.6.2",
-    "@graphql-codegen/typescript-react-query": "^3.5.5",
-    "@graphql-codegen/typescript-urql": "^3.5.3",
     "apollo-boost": "^0.4.9",
+    "apollo-link": "^1.2.14",
     "autoprefixer": "^10.4.2",
     "date-fns": "^2.28.0",
     "emoji-regex": "^10.0.0",
@@ -47,8 +45,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.10",
-    "@graphql-codegen/cli": "2.6.2",
-    "@graphql-codegen/typescript": "2.4.5",
+    "@graphql-codegen/cli": "^2.6.4",
+    "@graphql-codegen/typescript": "^2.5.1",
     "@graphql-codegen/typescript-operations": "2.3.2",
     "@graphql-codegen/typescript-react-apollo": "3.2.8",
     "@mdx-js/react": "^1.6.22",
