--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -26,7 +26,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-, "src/components/Login.js"  ],
+, "oldFiles/Login.js"  ],
   "exclude": [
     "node_modules"
   ]
